8.在页面使用fmt标签实现国际化

--- a/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
@@ -6,3 +6,15 @@ object.submenu.description=\u5B50\u83DC\u5355
 
 object.submenu2.title=\u5B50\u83DC\u53552
 object.submenu2.description=\u5B50\u83DC\u53552
+
+object.navigator.title=\u5BFC\u822A\u680F
+object.navigator.description=\u5BFC\u822A\u680F
+
+object.menu1.title=\u83DC\u53551
+object.menu1.description=\u83DC\u53551
+
+object.menu2.title=\u83DC\u53552
+object.menu2.description=\u83DC\u53552
+
+object.menu3.title=\u83DC\u53553
+object.menu3.description=\u83DC\u53553
