--- a/src/main/java/com/z2w/action/resource/ActionRB_zh_CN.properties
+++ b/src/main/java/com/z2w/action/resource/ActionRB_zh_CN.properties
@@ -15,3 +15,6 @@ opt.subabc.description=\u6D4B\u8BD5Sub ABC
 
 opt.subbbc.title=\u6D4B\u8BD5Sub BBC
 opt.subbbc.description=\u6D4B\u8BD5Sub BBC
+
+action.reload.title=\u91CD\u8F7DAction
+action.reload.description=\u91CD\u65B0\u8F7D\u5165\u6240\u6709action\u914D\u7F6E
