--- a/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
@@ -18,3 +18,9 @@ object.menu2.description=\u83DC\u53552
 
 object.menu3.title=\u83DC\u53553
 object.menu3.description=\u83DC\u53553
+
+object.system_config_actions.title=\u7CFB\u7EDF\u914D\u7F6E
+object.system_config_actions.description=\u7CFB\u7EDF\u914D\u7F6E
+
+system.systemTools.title=\u5DE5\u5177
+system.systemTools.description=\u5DE5\u5177
