10.使用log4j并动态更改log级别

--- a/src/main/java/com/z2w/common/resource/NavigatorRB_en_US.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB_en_US.properties
@@ -24,3 +24,6 @@ object.system_config_actions.description=System Configuration
 
 system.systemTools.title=System Tools
 system.systemTools.description=System Tools
+
+system.log4jMng.title=Log4j management
+system.log4jMng.description=Log4j management
