--- a/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
@@ -24,3 +24,6 @@ object.system_config_actions.description=\u7CFB\u7EDF\u914D\u7F6E
 
 system.systemTools.title=\u5DE5\u5177
 system.systemTools.description=\u5DE5\u5177
+
+system.log4jMng.title=Log4j\u7BA1\u7406
+system.log4jMng.description=Log4j\u7BA1\u7406
