更改了组织拼写错误。添加组织在导航器菜单

--- a/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB_zh_CN.properties
@@ -10,14 +10,8 @@ object.submenu2.description=\u5B50\u83DC\u53552
 object.navigator.title=\u5BFC\u822A\u680F
 object.navigator.description=\u5BFC\u822A\u680F
 
-object.menu1.title=\u83DC\u53551
-object.menu1.description=\u83DC\u53551
-
-object.menu2.title=\u83DC\u53552
-object.menu2.description=\u83DC\u53552
-
-object.menu3.title=\u83DC\u53553
-object.menu3.description=\u83DC\u53553
+object.menu1.title=\u83DC\u5355\u6D4B\u8BD5
+object.menu1.description=\u83DC\u5355\u6D4B\u8BD5
 
 object.system_config_actions.title=\u7CFB\u7EDF\u914D\u7F6E
 object.system_config_actions.description=\u7CFB\u7EDF\u914D\u7F6E
@@ -27,3 +21,6 @@ system.systemTools.description=\u5DE5\u5177
 
 system.log4jMng.title=Log4j\u7BA1\u7406
 system.log4jMng.description=Log4j\u7BA1\u7406
+
+object.orgnazition.title=\u7EC4\u7EC7
+object.orgnazition.description=\u7EC4\u7EC7
