更新一个action下拉菜单的实现

--- a/src/main/java/com/z2w/action/resource/ActionRB_zh_CN.properties
+++ b/src/main/java/com/z2w/action/resource/ActionRB_zh_CN.properties
@@ -1,8 +1,10 @@
 navigator.show.title=\u663E\u793A
 navigator.show.description=\u663E\u793A
+navigator.show.iconCls=icon-add
 
 navigator.test.title=\u6D4B\u8BD5
 navigator.test.description=\u6D4B\u8BD5
+navigator.test.iconCls=icon-add
 
 opt.abc.title=\u6D4B\u8BD5ABC
 opt.abc.description=\u6D4B\u8BD5ABC
@@ -15,6 +17,7 @@ opt.subabc.description=\u6D4B\u8BD5Sub ABC
 
 opt.subbbc.title=\u6D4B\u8BD5Sub BBC
 opt.subbbc.description=\u6D4B\u8BD5Sub BBC
+opt.subbbc.iconCls=icon-cancel
 
 action.reload.title=\u91CD\u8F7DAction
 action.reload.description=\u91CD\u65B0\u8F7D\u5165\u6240\u6709action\u914D\u7F6E
