基于action的infoPage页面初始提交

--- a/src/main/java/com/z2w/container/resource/Z2WOrganizationRB_zh_CN.properties
+++ b/src/main/java/com/z2w/container/resource/Z2WOrganizationRB_zh_CN.properties
@@ -1,5 +1,11 @@
-orgnazition.detail.title=\u8BE6\u7EC6\u4FE1\u606F
-orgnazition.detail.description=\u67E5\u770B\u7EC4\u7EC7\u8BE6\u7EC6\u4FE1\u606F
+organization.detail.title=\u8BE6\u7EC6\u4FE1\u606F
+organization.detail.description=\u67E5\u770B\u7EC4\u7EC7\u8BE6\u7EC6\u4FE1\u606F
 
-orgnazition.content.title=\u5185\u5BB9
-orgnazition.content.description=\u67E5\u770B\u7EC4\u7EC7\u5185\u7684\u5185\u5BB9
+organization.content.title=\u5185\u5BB9
+organization.content.description=\u67E5\u770B\u7EC4\u7EC7\u5185\u7684\u5185\u5BB9
+
+organization.detailTab.title=\u8BE6\u7EC6\u4FE1\u606F
+organization.detailTab.titdescriptionle=\u8BE6\u7EC6\u4FE1\u606F\u6807\u7B7E\u9875
+
+organization.contentTab.title=\u5185\u5BB9
+organization.contentTab.description=\u5185\u5BB9\u6807\u7B7E\u9875
